<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">G-tune. Guitar fine tuner</string>
    <string name="b_std">B standard</string>
    <string name="e_std">E 6 str. standard</string>
    <string name="drop_d_std">Drop D</string>
    <string name="drop_c_std">Drop C</string>
    <string name="double_drop_d_std">Double Drop D</string>
    <string name="open_a_std">Open A</string>
    <string name="open_c_std">Open C</string>
    <string name="open_d_std">Open D \'Dylan\'</string>
    <string name="open_g_std">Open G \'Stones\'</string>
    <string name="_1st">1st</string>
    <string name="_2nd">2nd</string>
    <string name="_3rd">3rd</string>
    <string name="_4th">4th</string>
    <string name="_5th">5th</string>
    <string name="_6th">6th</string>
    <string name="hello_world">Hello world</string>
    <string name="cross_a">Alternative Cross A</string>
    <string name="E">E</string>
    <string name="A">A</string>
    <string name="D">D</string>
    <string name="G">G</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="F">F</string>
    <string name="Ep">E#</string>
    <string name="Ap">A#</string>
    <string name="Dp">D#</string>
    <string name="Gp">G#</string>
    <string name="Bp">B#</string>
    <string name="Cp">C#</string>
    <string name="Fp">F#</string>
    <string name="open_c6_std">Open C6 \'Led Zeppelin\'</string>
    <string name="open_d6_std">Open D6</string>
    <string name="open_e_std">Open E</string>
    <string name="low_c_std">Low C \'Celtic\'</string>
    <string name="bass">BASS</string>
    <string name="publisher_id" translatable="false">ca-app-pub-9163301852390874/6770058536</string>
    <string name="exit_frase">Are you sure you want leave app?</string>
    <string name="exit">Leave</string>

    <string name="ask_for_error_log_app" translatable="false">Guitar tuner перезагружается после ошибки...\nApp is restarting after the error...\nThank you for your support.</string>
    <string name="update_to_latest_version">Please update app to the latest version on Google Play Market</string>
    <string name="Update_now">Update now</string>
</resources>